fast alles fertig

--- a/bindu.bib
+++ b/bindu.bib
@@ -550,7 +550,7 @@ keywords={seclit},
 
 @book{lucknow2021,
   title     = {A Catalogue Of Manuscripts In Akhil Bharatiya Sanskrit Parishad},
-  editor    ={Shri K. A. Subramania Iyer and Shri G. C. Sinha and Dr. J. P. Sinha.},
+  editor    ={Shri K. A. Subramania Iyer and Shri G. C. Sinha and Dr. J. P. Sinha},
   year      = {2021},
   publisher = {Muthulakshmi Research Academy, Akhil Bharatiya Sanskrit Parishad},
   address   = {Lucknow}, 
@@ -1149,7 +1149,7 @@ keywords={seclit},
      year= {2004},
      journal= {New Approaches to the Study of Religion - Volume I: Regional, Critical and Historical Approaches},
      volume= {1},
-     editor= {Peter Antes;Armin W. Geertz; Randi R. Warne},
+     editor= {Peter Antes and Armin W. Geertz and Randi R. Warne},
      publisher= {Walter de Gruyter},
      address= {Berlin und New York},
      keywords={seclit},
@@ -2878,7 +2878,7 @@ keywords={primary},
 
 @phdthesis{powell2023,
    title={A Lamp on Śivayoga: The Union of Yoga, Ritual, and Devotion in the Śivayogapradīpikā},
-   editor={Powell, Seth David},   
+   author={Powell, Seth David},   
    year={2023},
    note={Dissertation as submitted on April 2023}, 
    school={Harvard University},
@@ -3206,13 +3206,33 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
   title={Rājamārtaṇḍa}, 
   subtitle={Pātañjalayogasūtrāṇi vācaspatimiśraviracitaṭīkāsaṃvalitavyāsabhāṣyasametāni tathā bhojadevaviracitarājamārtaṇḍābhidhavṛttisametāni},
   year={1904},
-  hpwpublished={Ānandāśramasaṃskṛtagrathāvaliḥ. Vol. 47},
+  howpublished={Ānandāśramasaṃskṛtagrathāvaliḥ. Vol. 47},
   editor={Kāśīnātha Śāstri Āgāśe},
   publisher={Ānandāśramamudraṇālaya},
   note={Pune},
   keywords={primary},
 }%!
 
+@misc{kashikhanda1998,
+    title        = {Kāśīkhaṇḍa},
+    subtitle     = {Kāśīkhaṇḍa (Skandapurāṇa)},
+    editor       = {Karuṇāpaṭī Tripāṭhī},
+    year         = {1998},
+    publisher    = {Sampūrnānand Sanskrit University},
+    note         = {Vārāṇasī},
+    howpublished = {4 volumes},
+  keywords       = {primary},
+}%!
+
+@misc{astavakragita1997,
+    title ={Aṣṭāvakragītā}, 
+    subtitle        = {Aṣṭāvakragītā (The Song of the Self Supreme): The Classical Text of Ātmādvaita},
+    year         = {1997},
+    publisher    = {Motilal Banarsidass},
+    note       = {Delhi},
+    editor =      {Mukerjee, Radhakamal},
+    keywords       = {primary},
+}%!
 
 @misc{patanjalabhasyavartika,
   title={Pātañjalabhāṣyavārttika},
