--- a/intro.bib
+++ b/intro.bib
@@ -183,7 +183,7 @@ keywords={seclit},
 }%!
 
 @article{birch2018ayur,
-  author = {Birch, Birch},
+  author = {Birch, Jason},
   title = {Premodern Yoga Traditions and Ayurveda: Preliminary Remarks on Shared Terminology, Theory, and Praxis},
   journal = {History of Science in South Asia},
   volume = {6},
@@ -275,7 +275,7 @@ keywords={seclit},
    keywords={primary},
 }%!
 
-@misc{ytbd1,
+@misc{ytbd,
    title={Tatvayogabiṃdu},
    subtitle={Tatvayogabiṃdu},
    howpublished={Ms. No. 30019. Indira Gandhi National Centre for the Arts, Delhi},
@@ -550,7 +550,7 @@ keywords={seclit},
 
 @book{lucknow2021,
   title     = {A Catalogue Of Manuscripts In Akhil Bharatiya Sanskrit Parishad},
-  editor    ={Shri K. A. Subramania Iyer and Shri G. C. Sinha and Dr. J. P. Sinha.},
+  editor    ={Shri K. A. Subramania Iyer and Shri G. C. Sinha and Dr. J. P. Sinha},
   year      = {2021},
   publisher = {Muthulakshmi Research Academy, Akhil Bharatiya Sanskrit Parishad},
   address   = {Lucknow}, 
@@ -908,7 +908,7 @@ keywords={primary},
   keywords={primary},
 }%!
 
-@misc{tantraloka,
+@misc{tantralokax,
   title={Tantrāloka},
   subtitle={The Tantrāloka of Abhinavagupta. With Commentary Viveka by Jayadratha. In 8 volumes.},
   editor={Dwivedi, R. C. and Rastogi, Navjivan},
@@ -1149,7 +1149,7 @@ keywords={seclit},
      year= {2004},
      journal= {New Approaches to the Study of Religion - Volume I: Regional, Critical and Historical Approaches},
      volume= {1},
-     editor= {Peter Antes;Armin W. Geertz; Randi R. Warne},
+     editor= {Peter Antes and Armin W. Geertz and Randi R. Warne},
      publisher= {Walter de Gruyter},
      address= {Berlin und New York},
      keywords={seclit},
@@ -1671,7 +1671,7 @@ keywords={seclit},
 
 @book{kowski1988,
   title={The Canon of the Śaivāgama and the Kūbjika Tantras of the Western Kaula Tradition},
-  editor={Dyczkowski, M.S.G.},
+  editor={Dyczkowski, M. S. G.},
   year={1988},
   series={The Suny Series in the Shaiva Traditions of Kashmir}, 
   publisher={The State University of New York Press},
@@ -1701,7 +1701,7 @@ keywords={seclit},
   keywords={primary},
 }%!
 
-@miscv{bhagavata,
+@misc{bhagavata,
 title={Bhāgavatapurāṇa},
 title={Bhāgavata Purāṇa},
 editor={Shastri, J. L. and Tagara, G. V.},
@@ -1754,7 +1754,7 @@ keywords={primary},
   keywords={primary},
 }%!
 
-@misc{kaviraj,
+@misc{jogpradipyaka,
   title={Jogpradīpyakā}, 
   subtitle={Jogpradīpyakā of Jayatarāma},
   editor={Maheśānanda, Swāmi and Sharma, Dr. B. R. and Sahay, Shri G. S. and Bodhe, Shri R. K.},
@@ -2284,7 +2284,7 @@ keywords={primary},
  keywords={onlinesource},
  }%!
 
-@article{birch2014,
+@article{birch2014a,
    title={Yoganidrā: An Understanding of the History and Context},
    author={Birch, Jason and Hargreaves, Jaqueline},
    year={2014},
@@ -2358,18 +2358,6 @@ keywords={primary},
    address={Poona},
    publisher={Deccan College Post-graduate and Research Institute},
    keywords={seclit},
-}%!
-
-@article{maas2009stemma, 
- title={Computer Aided Stemmatics — The Case of Fifty-Two Text Versions of Carakasaṃhitā Vimānasthāna 8.67-157}, 
- author={Maas, Philipp André}, 
- year={2009}, 
- journal={Vienna Journal of South Asian Studies 2009-2010}, 
- volume={52/53 Text Genealogy, Textual Criticism and Editorial Technique (2009-2010)},
- pages={63--119}, 
- publisher={Austrian Academy of Sciences Press},
- address={Vienna}, 
- keywords={seclit}, 
 }%!
 
 @misc{kissmatsya, 
@@ -2890,7 +2878,7 @@ keywords={primary},
 
 @phdthesis{powell2023,
    title={A Lamp on Śivayoga: The Union of Yoga, Ritual, and Devotion in the Śivayogapradīpikā},
-   editor={Powell, Seth David},   
+   author={Powell, Seth David},   
    year={2023},
    note={Dissertation as submitted on April 2023}, 
    school={Harvard University},
@@ -3043,17 +3031,6 @@ publisher={Institute Francise De Pondicherry},
 address={Pondicherry},
     keywords={primary},
 }%!
-
-@misc{yuktabhavadeva,
-    title={Yuktabhavadeva},
-    subtitle={Yuktabhavadeva of Bhavadeva Miśra}, 
-    editor={Gharote, M. L. and Jha, V. K.}, 
-    year={2002},
-    publisher={The Lonavla Yoga Institute},
-    address={Lonavla},
-    keywords={primary},
-}%!
-
 
 @misc{rudrayamala1937,
     title={Rudrayamalam uttaratantram},
@@ -3229,11 +3206,32 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
   title={Rājamārtaṇḍa}, 
   subtitle={Pātañjalayogasūtrāṇi vācaspatimiśraviracitaṭīkāsaṃvalitavyāsabhāṣyasametāni tathā bhojadevaviracitarājamārtaṇḍābhidhavṛttisametāni},
   year={1904},
-  hpwpublished={Ānandāśramasaṃskṛtagrathāvaliḥ. Vol. 47},
+  howpublished={Ānandāśramasaṃskṛtagrathāvaliḥ. Vol. 47},
   editor={Kāśīnātha Śāstri Āgāśe},
   publisher={Ānandāśramamudraṇālaya},
   note={Pune},
   keywords={primary},
+}%!
+
+@misc{kashikhanda1998,
+    title        = {Kāśīkhaṇḍa},
+    subtitle     = {Kāśīkhaṇḍa (Skandapurāṇa)},
+    editor       = {Karuṇāpaṭī Tripāṭhī},
+    year         = {1998},
+    publisher    = {Sampūrnānand Sanskrit University},
+    note         = {Vārāṇasī},
+    howpublished = {4 volumes},
+  keywords       = {primary},
+}%!
+
+@misc{astavakragita1997,
+    title ={Aṣṭāvakragītā}, 
+    subtitle        = {Aṣṭāvakragītā (The Song of the Self Supreme): The Classical Text of Ātmādvaita},
+    year         = {1997},
+    publisher    = {Motilal Banarsidass},
+    note       = {Delhi},
+    editor =      {Radhakamal Mukerjee},
+    keywords       = {primary},
 }%!
 
 
@@ -3245,7 +3243,7 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
   keywords={primary},
 }%!
 
-@misc(guhyanisvasa, 
+@misc{guhyanisvasa, 
   title={Guhyasūtra}, 
   subtitle={Guhyasūtra of the Niśvāsatattvasaṃhitā}, 
   howpublished={NGMPP A 41-14 and NGMPP A 159-18. National Archives of Nepal, Kathmandu},
@@ -3267,22 +3265,21 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
 @misc{rajayoga, 
   title={Rājayogaḥ},
   subtitle={Rājayogaḥ of Śrī Agasthyamaunīndra},
-  howpublished={Ms. No. R 17980 (Transcribed by Jason Birch) Government Oriental Manuscript Library, Madras University, Chennai},
+  howpublished={Ms. No. R 17980. Transcribed by Jason Birch. Government Oriental Manuscript Library, Madras University, Chennai},
   keywords={primary},
 }%!
 
-
 @misc{vivekamartandaolda,
-   title={Vivekamārtaṇḍa},
-   subtitle={Vivekamārtaṇḍa of Gorakṣa},
-   howpublished={Acc. No. 4110. Central Library, Baroda},
+  title={Vivekamārtaṇḍa},
+  subtitle={Vivekamārtaṇḍa of Gorakṣa},
+  howpublished={Acc. No. 4110. Central Library, Baroda},
   keywords={primary},
 }%!
 
 @misc{urmikaula, 
   title={Ūrmikaulārṇavatantra},
   subtitle={Ūrmikaulārṇavatantra},
-  howpublished={Ms. No. 5-5207 (sic. 5-5202). NGMPP reel No. B 115-9. National Archives of Nepal, Kathmandu},
+  howpublished={Ms. No. 5-5207. Sic. 5-5202. NGMPP reel No. B 115-9. National Archives of Nepal, Kathmandu},
   keywords={primary},
 }%!
 
@@ -3776,7 +3773,7 @@ subtitle={The Niśvāsatattvasaṃhitā: The Earliest Surviving Śaiva Tantra},
 
 @misc{brhadaranyaka,
    title={Bṛhadāraṇyakopaniṣat},
-   subtitle={Bṛhadāraṇyakopaniṣat with the \textit{bhāṣya} attributed to Śaṅkara}},
+   subtitle={Bṛhadāraṇyakopaniṣat with the \textit{bhāṣya} attributed to Śaṅkara},
    year={1986},
    editor={Shastri, Subrahmanya},  
    publisher={Mahesh Research Institute},
@@ -3801,12 +3798,12 @@ subtitle={The Niśvāsatattvasaṃhitā: The Earliest Surviving Śaiva Tantra},
    keywords={primary},
 }%!
 
-@misc{kathaup,
-   title={Kaṭhopaniṣad},
-   subtitle={Kaṭha Upaniṣad},
-   howpublished={See The Early Upanishads, pp. 372--402},
-   keywords={primary},
-}%!
+%@misc{kathaup,
+%   title={Kaṭhopaniṣad},
+%   subtitle={Kaṭha Upaniṣad},
+%   howpublished={See The Early Upanishads, pp. 372--402},
+%   keywords={primary},
+%}%!
 
 @misc{yogatattvopanishad,
    title={Yogatattvopaniṣad},
@@ -3985,15 +3982,15 @@ address={Delhi},
   keywords={primary},
   }%!
 
-@misc{bhagavata,
-   title={Bhāgavatapurāṇa},
-   subtitle={Bhāgavata Purāṇa},
-   editor={Śarman, Vasudeva},
-   year={1905},
-   publisher={Nirnaya Sagar},
-   note={Bombay},
-  keywords={primary},
-  }%!
+%@misc{bhagavata,
+%   title={Bhāgavatapurāṇa},
+%   subtitle={Bhāgavata Purāṇa},
+%   editor={Śarman, Vasudeva},
+%   year={1905},
+%   publisher={Nirnaya Sagar},
+%   note={Bombay},
+%  keywords={primary},
+%  }%!
 
 @book{triadicheart,
    title={The Triadic Heart of Śiva, Kaula Tantrism of Abhinavagupta in the non-dual Shaivism of Kashmir},
@@ -4018,10 +4015,10 @@ address={Delhi},
 @misc{netratantra,
    title={Netratantra with Netroddyota},
    subtitle={Netratantra with the commentary (Netroddyota) of Rājānaka Kṣemarāja}, 
-   year={1926 and 1939},
+   year={1939},
    editor={Śāstri, Madhusūdan Kaul},
-   series={Kashmir Series of Texts and Studies 46, 59},
-   note={Srinagar, Bombay},
+   howpublished={First Edition 1926. Kashmir Series of Texts and Studies 46, 59},
+   note={Srinagar | Bombay},
    keywords={primary},
 }%!
 
